--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.19",
     "protractor": "^3.0.0"
+  },
+  "dependencies": {
+    "bower": "^1.6.9"
   }
 }
