--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "bower": "^1.6.9"
   },
   "scripts": {
-      "postinstall": "bower install"
-    }
+    "postinstall": "./node_modules/bower/bin/bower install" 
+  }
 }
