--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: node_js
 node_js:
   - "0.10"
 before_script:
-  - bower install
+  - node_modules/bower/bin/bower install
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - webdriver-manager update
