trying to crack travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 script:
   #- npm test --single-run
   #- node_modules/.bin/protractor test/e2e/conf.js --browser=firefox
-  - npm run test
+  - npm run test-karma --single-run
+  - npm run test-protractor --single-run
 language: node_js
 node_js:
   - "0.10"
